--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.x",
     "autoprefixer": "9.1.x",
-    "browser-sync": "^2.26.0",
-    "gulp": "4.0.x",
-    "gulp-plumber": "1.2.x",
+    "browser-sync": "^2.26.7",
+    "gulp": "^4.0.2",
+    "gulp-plumber": "^1.2.1",
     "gulp-postcss": "8.0.x",
-    "gulp-sass": "4.0.x",
+    "gulp-sass": "^4.0.2",
     "stylelint": "9.6.x",
-    "stylelint-config-htmlacademy": "0.1.x"
+    "stylelint-config-htmlacademy": "^0.1.3"
   },
   "scripts": {
     "editorconfig": "editorconfig-cli",
